# singles-in-your-area

./: .gitignore  Cargo.toml  README.md  build.sh  deny.toml  run.sh  update_db.sh
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  publish.yml
examples/: config.toml
src/: advert.rs  main.rs
