[package]
name = "singles-in-your-area"
version = "0.3.3"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
edition = "2024"
repository = "https://github.com/zkxs/singles-in-your-area"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3" # uses tokio 1.0
chrono = "0.4"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
maxminddb = "0.25"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
const_format = "^0.2"
