[package]
name = "singles-in-your-area"
version = "0.3.3"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
edition = "2024"
repository = "https://github.com/zkxs/singles-in-your-area"
license = "AGPL-3.0-or-later"

[profile.release-optimized-debug]
inherits = "release"
strip = false # required for `cargo-bloat`
debug = true # required for `cargo flamegraph`, and makes `cargo-bloat` output significantly better

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3" # uses tokio 1.0
chrono = "0.4"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
maxminddb = "0.26"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
const_format = "^0.2"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unused_async = "warn"
unused_self = "warn"
unwrap_used = "deny"
used_underscore_binding = "warn"
used_underscore_items = "warn"
string_slice = "deny"
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
fn_to_numeric_cast_any = "warn"
ptr_as_ptr = "warn"
